# Backgammon-Engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  Pieces.cpp  Pieces.hpp  Pieces.hpp.gch  README.md  RL Model Architecture.md  a.out  game.cpp  game.hpp  game.hpp.gch  gtp.cpp  jailedPiece.cpp  jailedPiece.hpp  jailedPiece.hpp.gch  main.cpp  makefile  model2.py  model_checkpoint_20250602_120515.pth  model_checkpoint_20250602_123937.pth  model_checkpoint_20250603_013903.pth  model_checkpoint_20250603_122641.pth  model_checkpoint_20250603_183415.pth  model_checkpoint_20250604_105204.pth  model_checkpoint_20250604_125659.pth  model_checkpoint_20250604_131528.pth  model_checkpoint_20250604_133113.pth  model_checkpoint_20250608_225325.pth  nextDevs.txt  player.cpp  player.hpp  player.hpp.gch  pyproject.toml  requirements.txt  tdgammonNEW.pth  tdgammonNEW20k.pth  tdgammon_model.pth  tdgammon_model100.pth  tdgammon_model10000.pth  (+5 more)
Cmake/: CMakeListst.txt  hello_test.cpp
a.out.dSYM/Contents/Resources/DWARF/: a.out
checkpoints/: model_1.pth  model_2.pth  model_3.pth  model_4.pth  model_5.pth  model_6.pth
cppsrc/: Pieces.cpp  Pieces.hpp  backgammon_bindings.cpp  game.cpp  game.hpp  main.cpp  player.cpp  tests  tests.cpp
gtest/: gtest-matchers.h  gtest-message.h  gtest-printers.h  gtest.h
gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-port.h  gtest-string.h  gtest-type-util.h
models/: bestModel.pth  tdgammonNEW100k.pth  tdgammonNEW10k.pth  tdgammon_20260603_185412.pth  tdgammon_20260603_210303.pth  tdgammon_20260603_210822.pth
pysrc/: BckgammonNet.py  benchmark.py  byndings_test.py  encode_state.py  play_model.py  tests.py  train.py
pysrc/TD(λ) model/: model.py  train.py
pysrc/model v1/: encode_state.py  trainTD.py
pysrc/model v2/: benchmark.py  model2.py  train model2.py
pysrc/model v3/: bench3.py  model3.py  play_model.py  prototypes.ipynb  train3.py  trainasdf.py
pysrc/modelTD/: benchmark.py  model3.py  play_model.py  train3.py
torch_env/: pyvenv.cfg
