[build-system]
requires = ["setuptools", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "backgammon-engine"
version = "0.1.0"
description = "Cool project"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.7"
dependencies = ["pybind11"]

[tool.setuptools.packages.find]
where = ["."]
