[tool.poetry]
name = "backgammon-engine"
version = "0.1.0"
description = ""
authors = ["Romanos Chiliarchopoulos <romanoshiliarhopoulos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.15"
torch = "^2.9.1"
numpy = "^2.4.1"
tqdm = "^4.67.1"
matplotlib = "^3.10.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
