[tool.poetry]
name = "backgammon-engine"
version = "0.1.0"
description = ""
authors = ["Romanos Chiliarchopoulos <romanoshiliarhopoulos@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11,<3.15"
torch = "^2.9.1"
numpy = "^2.4.1"
tqdm = "^4.67.1"
matplotlib = "^3.10.8"
pybind11 = "^2.11"

[tool.pytest.ini_options]
testpaths = ["pysrc"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
